# templates-celery

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: notebooks.ipynb
templates/celery/: tasks.py
templates/db/: postgresql.py  sqlite.py
templates/fastapi/: controller.py
templates/models/: certrificate.py  template.py
templates/services/: certificate_service.py  template_service.py
tests/: base_fixtures.py
tests/services/: template_service_test.py
