[tool.poetry]
name = "templates-celery"
version = "0.1.0"
description = "PDF templates with Celery."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "templates"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.1"
pymupdf = "^1.26.3"
reportlab = "^4.4.3"
pymongo = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"